--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
@@ -36,3 +37,95 @@
     transform: rotate(360deg);
   }
 }
+
+.app{
+  margin-top: 10px;
+  padding: 2px 100px;
+  /* margin-bottom: 10px; */
+}
+.qqq{
+  word-break: break-all;
+}
+.first{
+  margin: 10px;
+  padding: 5px;
+  border: #61dafb solid 2px;
+}
+.Bar{
+  height: 20px;
+  width: 100%;
+  background-color: rgb(239, 236, 236);
+  margin: 10px 0 50px 0;
+}
+.subbar{
+  background-color: rgb(132, 126, 126);
+  height: 20px;
+}
+.bottom{
+  height: 30px;
+  width: 100%;
+  background-color: rgb(239, 236, 236);
+  border: 1px solid black;
+  border-radius: 15px;
+  position: relative;
+}
+.score{
+  height: 30px;
+  border-radius: 15px;
+  border: 1px solid black;
+  background-color: #282c34;
+  position: absolute;
+}
+.maxscore{
+  height: 30px;
+  border-radius: 15px;
+  background-color: #737476;
+  position: absolute;
+  /* left: 100px; */
+  /* bottom: 5px; */
+}
+.scores{
+  display: flex;
+  justify-content: space-between;
+}
+.Header{
+  display: flex;
+  flex-direction: column;
+  column-gap: 2px;
+  margin-bottom: 70px;
+}
+.questionheader{
+  font-size: x-large;
+  font-weight: 700;
+}
+.article{
+  padding: 5px;
+  margin: 5px;
+}
+.answer{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 50px;
+}
+.ans{
+  background-color: #cccdcf;
+  padding: 10px 20px;
+  border-radius: 5px;
+  width: auto;
+  text-align: center;
+  font-size: medium;
+   
+}
+.ans:focus{
+  background-color: black;
+  color: white;
+  transition: .3s;
+}
+
+.mid-result{
+  text-align: center;
+}
+.score{
+  text-align: center;
+}
+
